# rustshell

./: CLAUDE.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
