[package]
name = "rustshell"
version = "0.1.0"
edition = "2021"
description = "Cross-platform remote shell client via RustDesk relay infrastructure"
license = "AGPL-3.0"
rust-version = "1.75"

[dependencies]
hbb_common = { git = "https://github.com/rustdesk/hbb_common", rev = "822701e" }
clap = { version = "4.2", features = ["derive"] }
crossterm = "0.27"
rpassword = "7.2"
sha2 = "0.10"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
